No-40. Todo List/todo-list/src/App.css
.main_div {
  height: 100vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.center_div {
  width: 50%;
  height: 80vh;
  box-shadow: 5px 5px 25px -5px rgba(0, 0, 0, 0.5);
  background-color: #aed4e6;
  border-radius: 15px;
}

h1 {
  color: white;
  background: transparent;
  background-color: #af7595;
  padding: 6px 0 2px 0;
  text-align: center;
  margin-bottom: 10px;
  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.5);
}

input {
  text-align: center;
  color: white;
  height: 30px;
  top: 10px;
  border: none;
  background: transparent;
  font-size: 20px;
  font-weight: 500;
  width: 60%;
  border-bottom: 2px solid #af7595;
  outline: none;
  margin-left: 50px;
}

input::placeholder {
  color: white;
}

button {
  min-height: 40px;
  width: 50px;
  border-radius: 100%;
  border-color: transparent;
  background-color: #af7595;
  color: white;
  font-size: 40px;
  border: none;
  outline: none;
  margin-left: 10px;
  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.5);
}

button:hover {
  background-color: green;
}

ol {
  margin-top: 30px;
}

ol li {
  padding-left: 0px;
  text-align: left;
  font-size: 20px;
  color: white;
  font-weight: 500;
  min-height: 40px;
  display: flex;
  align-items: center;
  text-transform: capitalize;
  background-color: #aed4e6;
}

@media (max-width: 768px) {
  .center_div {
    width: 80%;
  }
}

